refactor : 필드 final 부여, 불변맵 반환 로직 변경