@@ -1,14 +1,13 @@
 package myproject.mockjang.domain.note_parser;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 public class NoteContainer {
 
-  HashMap<NoteRegex, List<NoteAndId>> container;
+  private final HashMap<NoteRegex, List<NoteAndId>> container;
 
   public NoteContainer() {
     this.container = new HashMap<>();
@@ -16,8 +15,8 @@ public class NoteContainer {
 
   public void putNotes(NoteRegex regex, List<NoteAndId> noteAndIds) {
     if (container.containsKey(regex)) {
-      List<NoteAndId> currentHashMap = container.get(regex);
-      currentHashMap.addAll(noteAndIds);
+      List<NoteAndId> noteAndIds1 = container.get(regex);
+      noteAndIds1.addAll(noteAndIds);
       return;
     }
     container.put(regex, noteAndIds);
@@ -32,7 +31,10 @@ public class NoteContainer {
   }
 
   public Map<NoteRegex, List<NoteAndId>> getImmutableMap() {
-    Map<NoteRegex, List<NoteAndId>> immutableMap = new HashMap<>(container);
-    return Collections.unmodifiableMap(immutableMap);
+    Map<NoteRegex, List<NoteAndId>> immutableMap = new HashMap<>();
+    for (Map.Entry<NoteRegex, List<NoteAndId>> entry : container.entrySet()) {
+      immutableMap.put(entry.getKey(), List.copyOf(entry.getValue()));
+    }
+    return Map.copyOf(immutableMap);
   }
 }
